--- a/package.json
+++ b/package.json
@@ -42,8 +42,11 @@
     "@types/node": "^17.0.34",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "autoprefixer": "^10.4.16",
     "fslightbox-react": "^1.5.0",
     "node-fetch": "^3.1.1",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
     "typescript": "^4.6.4"
   }
 }
